data object model

--- a/07_DOM Introduction/One.html
+++ b/07_DOM Introduction/One.html
@@ -13,7 +13,10 @@
 </head>
 <body class="bg-black">
     <div>
-    <h1 id="title" class="heading">DOM learning on Akhil code</h1>
+    <h1 id="title" class="heading">DOM learning on Akhil code <span style="display: none;">test text</span></h1>
+    <h2>Lorem ipsum dolor sit.</h2>
+    <h2>Lorem ipsum dolor sit.</h2>
+    <h2>Lorem ipsum dolor sit.</h2>
     <p>Lorem ipsum dolor sit amet.</p>
 </div>
 </body>
